everything but the first post is ready

--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@ title: Home
 
 <p>Welcome to my blog!</p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
+<p>Please feel free to make a pull request in github if you find anything worth changing/adding:</p>
 
-<h2>Posts</h2>
+<ul>
+  <li><a href="https://github.com/hhefesto/hhefesto.github.io">Code for this blog</a></li>
+</ul>
+
+<h2>Blog's principles</h2>
+
+<ol>
+  <li>To publish with errors is better than not publishing at all</li>
+  <li>Attempt to reduce errors</li>
+  <li>Don't hide your errors: iterations on a blog are encoraged (i.e. versioning on blog posts)</li>
+  <li>Grow the community</li>
+  <li>Try to not take it too seriously (i.e. chill)</li>
+</ol>
+
+<h2>Latest Posts</h2>
 $partial("templates/post-list.html")$
 
 <p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
