--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href="./">My Hakyll Blog</a>
+                <a href="./">hhefesto's blog</a>
             </div>
             <nav>
                 <a href="./">Home</a>
@@ -22,7 +22,12 @@
 
         <main role="main">
             <h1>Contact</h1>
-            <p>I live in a small hut in the mountains of Kumano Kodō on Kii Hantō and would not like to be contacted.</p>
+            <ul>
+<li><a href="https://hhefesto.com">hhefesto.com<a></li>
+<li><a href="https://github.com/hhefesto">Github</a></li>
+<li><a href="https://gitlab.com/hhefesto">Gitlab</a></li>
+<li>hhefesto at rdataa dot com</li>
+</ul>
         </main>
 
         <footer>
