publish first post

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - About</title>
+        <title>hhefesto's blog - About</title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
@@ -22,8 +22,11 @@
 
         <main role="main">
             <h1>About</h1>
-            <p>My name is Daniel Herrera Rendón</p>
-<p>I love math, functional programming and my family.</p>
+            <p><img src="./images/profile-pic.jpg" style="float: left; margin: 10px;" width="150" height="150" /></p>
+<p><br /></p>
+<p>My name is Daniel Herrera Rendón</p>
+<p>I love math, functional programming, my family and my friends.</p>
+<p><a href="./docs/cv.pdf">This</a> is my CV.</p>
 <p>(ง︡’-’︠)ง</p>
         </main>
 
