--- a/archive.html
+++ b/archive.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - Archives</title>
+        <title>hhefesto's blog - Archives</title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
@@ -26,7 +26,7 @@
 <ul>
     
         <li>
-            <a href="./posts/2020-01-20-hakyll-nix.html">Hakyll + Nix + Github Pages</a> - January 20, 2020
+            <a href="./posts/2020-01-21-hello-world.html">Hakyll + Stack + Nix</a> - January 21, 2020
         </li>
     
 </ul>
