--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - Contact</title>
+        <title>hhefesto's blog - Contact</title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
@@ -28,6 +28,10 @@
 <li><a href="https://gitlab.com/hhefesto">Gitlab</a></li>
 <li>hhefesto at rdataa dot com</li>
 </ul>
+<h2 id="hire-me">Hire Me</h2>
+<p>Do you need help getting started? Are you stuck in something?</p>
+<p>Contact me!</p>
+<p>Fees will vary according to the request.</p>
         </main>
 
         <footer>
