--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - Home</title>
+        <title>hhefesto's blog - Home</title>
         <link rel="stylesheet" href="./css/default.css" />
     </head>
     <body>
@@ -23,8 +23,6 @@
         <main role="main">
             <h1>Home</h1>
             <h2>Welcome</h2>
-
-<img src="./images/haskell-logo.png" style="float: right; margin: 10px;" />
 
 <p>Welcome to my blog!</p>
 
@@ -48,7 +46,7 @@
 <ul>
     
         <li>
-            <a href="./posts/2020-01-20-hakyll-nix.html">Hakyll + Nix + Github Pages</a> - January 20, 2020
+            <a href="./posts/2020-01-21-hello-world.html">Hakyll + Stack + Nix</a> - January 21, 2020
         </li>
     
 </ul>
